err/glint-service.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/glint-service'...
Compiling './lib/python3.5/site-packages/glint-service/glint_arg_parser.py'...
***   File "./lib/python3.5/site-packages/glint-service/glint_arg_parser.py", line 9
    print "Init GlintArgumentParser"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glint-service/glint_git_setup.py'...
***   File "./lib/python3.5/site-packages/glint-service/glint_git_setup.py", line 19
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glint-service/glint_openstack_registration.py'...
***   File "./lib/python3.5/site-packages/glint-service/glint_openstack_registration.py", line 32
    print "warning: %s"%err
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glint-service/glint_setup.py'...
***   File "./lib/python3.5/site-packages/glint-service/glint_setup.py", line 23
    print "---------------------------"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glint-service/glint_status.py'...
***   File "./lib/python3.5/site-packages/glint-service/glint_status.py", line 10
    print "List glint-horizon processes"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glint-service/glint_stunnel_setup.py'...
***   File "./lib/python3.5/site-packages/glint-service/glint_stunnel_setup.py", line 15
    print "warning: %s"%err
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glint-service/glint_system_create_user.py'...
***   File "./lib/python3.5/site-packages/glint-service/glint_system_create_user.py", line 11
    print "warning: %s"%err
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
